remove javax.xml.bind import (#5329)
Signed-off-by: Lyubomir V. Papazov <lpapazow@gmail.com>